
 OpenSSL CHANGES
 _______________

 This is a high-level summary of the most important changes.
 For a full list of changes, see the git commit log; for example,
 https://github.com/openssl/openssl/commits/ and pick the appropriate
 release branch.

 Changes between 1.1.1 and 3.0.0 [xx XXX xxxx]

  *) Changed DH parameters to generate the order q subgroup instead of 2q.
     Previously generated DH parameters are still accepted by DH_check
     but DH_generate_key works around that by clearing bit 0 of the
     private key for those. This avoids leaking bit 0 of the private key.
     [Bernd Edlinger]

  *) Added a new FUNCerr() macro that takes a function name.
     The macro SYSerr() is deprecated.
     [Rich Salz]

  *) {CRYPTO,OPENSSL}_mem_debug_{push,pop} are now no-ops and have been
     deprecated.
     [Rich Salz]

  *) A new type, EVP_KEYEXCH, has been introduced to represent key exchange
     algorithms. An implementation of a key exchange algorithm can be obtained
     by using the function EVP_KEYEXCH_fetch(). An EVP_KEYEXCH algorithm can be
     used in a call to EVP_PKEY_derive_init_ex() which works in a similar way to
     the older EVP_PKEY_derive_init() function. See the man pages for the new
     functions for further details.
     [Matt Caswell]

  *) The EVP_PKEY_CTX_set_dh_pad() macro has now been converted to a function.
     [Matt Caswell]

  *) Removed the function names from error messages and deprecated the
     xxx_F_xxx define's.

  *) Removed NextStep support and the macro OPENSSL_UNISTD
     [Rich Salz]

  *) Removed DES_check_key.  Also removed OPENSSL_IMPLEMENT_GLOBAL,
     OPENSSL_GLOBAL_REF, OPENSSL_DECLARE_GLOBAL.
     Also removed "export var as function" capability; we do not export
     variables, only functions.
     [Rich Salz]

  *) RC5_32_set_key has been changed to return an int type, with 0 indicating
     an error and 1 indicating success. In previous versions of OpenSSL this